tests/invalid/calls/i14_call_undeclared.f
program callundecl
  integer x
  x = 5
  call ghost(x)
  print *, x
end
